# av-summary-video-gen

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  builder.py  common.py  grounded_notes.py  narrator.py  storyboard.py
knowledge/: __init__.py  pdf_reader.py  pdf_store.py  retrieval.py
models/: __init__.py  api.py  builder.py  builder_models.py  grounded_notes.py  narration.py  observability.py  storyboard.py  teaching_outline.py  validation.py
prompts/: __init__.py  grounded_notes.py  storyboard.py  teaching_outline.py
utils/: assets.py  budgeting.py  scene_templates.py  settings.py  validation.py
visuals/: __init__.py  assets.py  components.py  scene_templates.py  theme.py
