[project]
name = "av-summary-video-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.11",
    "openai>=1.0.0",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "pypdf>=5.0.0",
    "sqlalchemy>=2.0.0",
]
